Fix anchor color

--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -9,10 +9,12 @@ body {
 a {
   &:link {
     text-decoration: none;
+    color: #fff;
   }
   &:visited {
     //color: $color-default;
     text-decoration: underline;
+    color: #fff;
   }
   &:hover {
     text-decoration: underline;
