--- a/static/scss/_contact-form.scss
+++ b/static/scss/_contact-form.scss
@@ -2,6 +2,9 @@
   margin: $margin-separated*4 0;
   form {
     margin: 0 60px 0 30px;
+    @include respond-to(mobile) {
+      margin: 0;
+    }
   }
 
   .custom-input {
@@ -26,12 +29,27 @@
   }
 }
 
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak,
+.ng-hide:not(.ng-hide-animate) {
+  display: none !important;
+}
+
+ng\:form {
+  display: block;
+}
+
+
 .custom-input {
   font-size: 1.1em;
   font-weight: 100;
   border-radius: 3px;
   display: block;
-  padding: 20px 15px;
+  padding: 20px 15px 30px;
   border: 1px solid #c2c2c2;
   width: 100%;
   box-sizing: border-box;
@@ -75,24 +93,54 @@
   }
 }
 
+.custom-input {
+  &.ng-invalid {
+    border-color: #fff;
+    box-shadow: inset 0 0 0 2px $color-error !important;
+  }
+}
+
+
+.error {
+  color: $color-error;
+  font-size: 0.9em;
+  margin-top: 3px;
+  text-align: right;
+}
+
 
 .info {
   margin: $margin-separated*2 0 0 0;
+  @include respond-to(mobile) {
+    text-align: center;
+  }
   .tel,
   .email {
     color: $main-backgound;
     font-weight: 200;
     display: block;
     margin-bottom: $margin-separated;
-    //&:hover {
-    //  text-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    //}
   }
   .tel {
     font-size: 1.3em;
-    position: relative;
-    padding: 100px 0 0 0;
+    @include respond-to(mobile) {
+      background-position: center top;
+    }
+  }
+  .tel-icon {
+    padding: 20px;
     background:  url('../images/phone.png') no-repeat left top;
+    display: block;
+    width: 78px;
+    height: 78px;
+    @include respond-to(mobile) {
+      margin: 0 auto 15px;
+      background-position: center center;
+      box-shadow: inset 0 0 1px 1px rgba(0,0,0,0.1);
+      background-color: lighten(rgb(194, 194, 194), 20%);
+      border-radius: 10px;
+      padding: 20px 60px;
+    }
   }
   .email {
     font-size: 1.2em;
