--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -6,7 +6,11 @@
 
 @import "base";
 @import "header";
+@import "bootstrap_modal";
+@import "bootstrap_carousel";
 @import "articles";
 @import "contact-form";
 @import "footer";
+
+
 
