--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,12 +4,12 @@
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 192dpi) {
   .icon, .menu-list li:first-child .item:before, .menu-list li:nth-child(2) .item:before, .menu-list li:nth-child(3) .item:before, .menu-list li:nth-child(4) .item:before, .menu-list li:nth-child(5) .item:before, .menu-list li:nth-child(6) .item:before, #office-clean .item:before, #window-clean .item:before, #stairs-clean .item:before, #apartment-clean .item:before, #property-clean .item:before, #house-clean .item:before {
     background-image: url("../sprites_gen/sprite@1.5x.png");
-    background-size: 61px 583px; } }
+    background-size: 61px 578px; } }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .icon, .menu-list li:first-child .item:before, .menu-list li:nth-child(2) .item:before, .menu-list li:nth-child(3) .item:before, .menu-list li:nth-child(4) .item:before, .menu-list li:nth-child(5) .item:before, .menu-list li:nth-child(6) .item:before, #office-clean .item:before, #window-clean .item:before, #stairs-clean .item:before, #apartment-clean .item:before, #property-clean .item:before, #house-clean .item:before {
     background-image: url("../sprites_gen/sprite@2x.png");
-    background-size: 61px 583px; } }
+    background-size: 61px 579px; } }
 
 body {
   font: 200 100%/120% "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -121,21 +121,34 @@ h2 {
 .head {
   text-align: center;
   color: #fff;
-  background-color: #018bd3;
-  background: url("../images/main-background.jpg") repeat-x center top;
-  padding: 90px 0; }
-  @media (max-width: 767px) {
+  background: #018bd3 url("../images/main-background.jpg") repeat-x center top;
+  padding: 20px 0 90px; }
+  @media (max-width: 1024px) {
     .head {
       padding: 45px 0; } }
+  @media (max-width: 767px) {
+    .head {
+      padding: 30px 0; } }
   .head .logo {
     display: block; }
 
-.logo:hover {
-  text-decoration: none; }
+.logo {
+  margin: 70px 0 0 0; }
+  .logo:before, .logo:after {
+    content: "";
+    display: table;
+    box-sizing: border-box; }
+  .logo:after {
+    clear: both; }
+  .logo:hover {
+    text-decoration: none; }
+  .logo img {
+    display: inline-block;
+    vertical-align: bottom; }
 
-.logo img {
-  display: inline-block;
-  vertical-align: bottom; }
+.language {
+  text-decoration: underline;
+  text-align: right; }
 
 .menu {
   margin: 60px 0 0 0;
@@ -148,6 +161,9 @@ h2 {
   list-style: none;
   margin: 0 0 40px 0;
   padding: 0; }
+  @media (max-width: 1024px) {
+    .menu-list {
+      margin: 0; } }
   .menu-list:before, .menu-list:after {
     content: "";
     display: table;
@@ -157,6 +173,9 @@ h2 {
   .menu-list .title {
     font-size: 1.1em;
     margin: 0; }
+    @media (max-width: 1024px) {
+      .menu-list .title {
+        font-size: 1em; } }
   .menu-list li {
     float: left;
     border: 2px solid #fff;
@@ -168,22 +187,25 @@ h2 {
     box-sizing: border-box;
     margin-bottom: 30px;
     background: #018bd3; }
+    @media (max-width: 1024px) {
+      .menu-list li {
+        padding: 0; } }
     .menu-list li:first-child .item:before {
-      background-position: 0px -158px;
+      background-position: 0px -153px;
       background-repeat: no-repeat;
       overflow: hidden;
       display: block;
       width: 39px;
       height: 48px; }
     .menu-list li:nth-child(2) .item:before {
-      background-position: 0px -73px;
+      background-position: 0px -31px;
       background-repeat: no-repeat;
       overflow: hidden;
       display: block;
-      width: 47px;
-      height: 41px; }
+      width: 44px;
+      height: 38px; }
     .menu-list li:nth-child(3) .item:before {
-      background-position: 0px -255px;
+      background-position: 0px -250px;
       background-repeat: no-repeat;
       overflow: hidden;
       display: block;
@@ -194,17 +216,17 @@ h2 {
       background-repeat: no-repeat;
       overflow: hidden;
       display: block;
-      width: 50px;
-      height: 33px; }
+      width: 47px;
+      height: 31px; }
     .menu-list li:nth-child(5) .item:before {
-      background-position: 0px -114px;
+      background-position: 0px -109px;
       background-repeat: no-repeat;
       overflow: hidden;
       display: block;
       width: 44px;
       height: 44px; }
     .menu-list li:nth-child(6) .item:before {
-      background-position: 0px -305px;
+      background-position: 0px -300px;
       background-repeat: no-repeat;
       overflow: hidden;
       display: block;
@@ -225,6 +247,9 @@ h2 {
       display: inline-block;
       vertical-align: middle;
       padding: 25px 20px 25px 40px; }
+      @media (max-width: 1024px) {
+        .menu-list li .item {
+          padding-right: 0; } }
       .menu-list li .item:visited {
         color: #fff; }
       .menu-list li .item:hover {
@@ -235,6 +260,237 @@ h2 {
         top: 50%;
         left: 0;
         transform: translateX(-50%) translateY(-50%); }
+
+.modal-slider .modal-content {
+  padding: 30px;
+  box-sizing: border-box; }
+  @media (max-width: 767px) {
+    .modal-slider .modal-content {
+      height: 100%;
+      padding: 15px; } }
+
+.modal-slider .carousel-inner .item img {
+  max-width: 760px; }
+  @media (max-width: 1024px) {
+    .modal-slider .carousel-inner .item img {
+      max-width: 600px; } }
+  @media (max-width: 767px) {
+    .modal-slider .carousel-inner .item img {
+      max-width: 400px; } }
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+  display: none;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  outline: 0; }
+  .modal .modal-body {
+    position: relative; }
+  .modal .modal-dialog {
+    text-align: center;
+    box-sizing: border-box;
+    background-color: #fff;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transition: transform 0.3s ease-in-out;
+    overflow-x: hidden;
+    overflow-y: auto;
+    box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.2);
+    max-height: 100%; }
+    @media (max-width: 1024px) {
+      .modal .modal-dialog {
+        width: 90%; } }
+    @media (max-width: 767px) {
+      .modal .modal-dialog {
+        height: 96%; } }
+  .modal.fade .modal-dialog {
+    transform: translate(-50%, -100%); }
+  .modal.in .modal-dialog {
+    transform: translate(-50%, -30%); }
+  .modal .modal-container {
+    width: 800px;
+    margin: auto; }
+    .modal .modal-container .title {
+      font-size: 1.4em;
+      margin-bottom: 2em; }
+    @media (max-width: 1024px) {
+      .modal .modal-container {
+        width: 100%; } }
+    @media (max-width: 767px) {
+      .modal .modal-container {
+        height: 100%; } }
+  .modal .modal-header {
+    text-align: left;
+    padding: 8px 30px; }
+  .modal .close-btn {
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    top: 0;
+    padding: 5px 10px;
+    cursor: pointer;
+    color: rgba(36, 36, 36, 0.5);
+    font-size: 26px;
+    transition: color 0.25s ease-in-out; }
+    .modal .close-btn:hover {
+      color: #242424; }
+
+.modal-open {
+  overflow: hidden; }
+  .modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: auto; }
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  background-color: #575757; }
+  .modal-backdrop.fade {
+    opacity: 0; }
+  .modal-backdrop.in {
+    opacity: 0.5; }
+
+.carousel {
+  position: relative; }
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden; }
+  .carousel-inner .item {
+    position: relative;
+    display: none;
+    transition: 0.6s ease-in-out left; }
+
+.carousel {
+  position: relative;
+  min-height: 255px; }
+  @media (max-width: 1024px) {
+    .carousel {
+      min-height: 300px; } }
+
+.carousel-control {
+  font-size: 0;
+  color: transparent;
+  top: 50%;
+  cursor: pointer;
+  position: absolute;
+  background: url("../images/slide-prev.png") no-repeat left top;
+  width: 34px;
+  height: 64px; }
+  .carousel-control.left {
+    left: -25px;
+    transform: translateY(-50%); }
+    @media (max-width: 767px) {
+      .carousel-control.left {
+        left: -15px; } }
+  .carousel-control.right {
+    right: -25px;
+    transform: translateY(-50%) rotate(180deg); }
+    @media (max-width: 767px) {
+      .carousel-control.right {
+        right: -15px; } }
+
+@media all and (transform-3d) {
+  .carousel-inner > .item {
+    transition: transform .6s ease-in-out;
+    backface-visibility: hidden;
+    perspective: 1000px; }
+  .carousel-inner > .item.next,
+  .carousel-inner > .item.active.right {
+    left: 0;
+    transform: translate3d(100%, 0, 0); }
+  .carousel-inner > .item.prev,
+  .carousel-inner > .item.active.left {
+    left: 0;
+    transform: translate3d(-100%, 0, 0); }
+  .carousel-inner > .item.next.left,
+  .carousel-inner > .item.prev.right,
+  .carousel-inner > .item.active {
+    left: 0;
+    transform: translate3d(0, 0, 0); } }
+
+.carousel-inner > .active,
+.carousel-inner > .next,
+.carousel-inner > .prev {
+  display: block; }
+
+.carousel-inner > .active {
+  left: 0; }
+
+.carousel-inner > .next,
+.carousel-inner > .prev {
+  position: absolute;
+  top: 0;
+  width: 100%; }
+
+.carousel-inner > .next {
+  left: 100%; }
+
+.carousel-inner > .prev {
+  left: -100%; }
+
+.carousel-inner > .next.left,
+.carousel-inner > .prev.right {
+  left: 0; }
+
+.carousel-inner > .active.left {
+  left: -100%; }
+
+.carousel-inner > .active.right {
+  left: 100%; }
+
+.carousel-indicators {
+  margin-top: 30px; }
+  .carousel-indicators li {
+    width: 40px;
+    height: 25px;
+    margin: 0 6px;
+    font-size: 0;
+    color: transparent;
+    cursor: pointer;
+    background-color: rgba(51, 51, 51, 0.1);
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
+    transition: background 1.1s ease-in-out;
+    display: inline-block;
+    vertical-align: middle; }
+    .carousel-indicators li:hover .sr-only {
+      background-color: rgba(51, 51, 51, 0.1); }
+    .carousel-indicators li.active .sr-only {
+      background-color: rgba(51, 51, 51, 0.5);
+      width: 30px;
+      height: 15px;
+      margin: 5px;
+      display: block; }
+
+.carousel-caption {
+  position: absolute;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 10;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
+  @media (min-width: 768px) {
+    .carousel-caption {
+      right: 20%;
+      left: 20%;
+      padding-bottom: 30px; } }
+  .carousel-caption .btn {
+    text-shadow: none; }
 
 .article-title {
   font-size: 1.2em;
@@ -247,19 +503,28 @@ h2 {
     position: relative;
     padding: 0 0 0 130px;
     margin: 0 0 40px 0; }
+    @media (max-width: 767px) {
+      .main .item {
+        padding: 55px 0 0 0;
+        text-align: center; } }
     .main .item:before {
       position: absolute;
       content: "";
       top: 50%;
       left: 10px;
       transform: translateX(50%) translateY(-50%); }
+      @media (max-width: 767px) {
+        .main .item:before {
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%) translateY(0); } }
     .main .item .description p {
       line-height: 1.3;
       margin: 0 0 5px 0;
       padding: 0; }
 
 #office-clean .item:before {
-  background-position: 0px -522px;
+  background-position: 0px -517px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: block;
@@ -267,7 +532,7 @@ h2 {
   height: 62px; }
 
 #window-clean .item:before {
-  background-position: 0px -357px;
+  background-position: 0px -352px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: block;
@@ -275,7 +540,7 @@ h2 {
   height: 52px; }
 
 #stairs-clean .item:before {
-  background-position: 0px -409px;
+  background-position: 0px -404px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: block;
@@ -283,7 +548,7 @@ h2 {
   height: 56px; }
 
 #apartment-clean .item:before {
-  background-position: 0px -33px;
+  background-position: 0px -69px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: block;
@@ -291,7 +556,7 @@ h2 {
   height: 40px; }
 
 #property-clean .item:before {
-  background-position: 0px -206px;
+  background-position: 0px -201px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: block;
@@ -299,7 +564,7 @@ h2 {
   height: 49px; }
 
 #house-clean .item:before {
-  background-position: 0px -465px;
+  background-position: 0px -460px;
   background-repeat: no-repeat;
   overflow: hidden;
   display: block;
@@ -315,7 +580,16 @@ h2 {
   .gallery:after {
     clear: both; }
   .gallery .picture {
-    float: left; }
+    float: left;
+    width: 20%;
+    height: 154px; }
+    @media (max-width: 767px) {
+      .gallery .picture {
+        width: 50%; } }
+
+.gallery-item {
+  display: block;
+  cursor: pointer; }
 
 .custom-title {
   padding: 0 40px 5px 40px;
@@ -341,6 +615,9 @@ h2 {
 
 .about-us article {
   margin: 0 0 0 30px; }
+  @media (max-width: 767px) {
+    .about-us article {
+      margin: 0; } }
 
 .about-us header {
   font-size: 1.1em;
@@ -359,6 +636,9 @@ h2 {
   margin: 60px 0; }
   #contact-us form {
     margin: 0 60px 0 30px; }
+    @media (max-width: 767px) {
+      #contact-us form {
+        margin: 0; } }
   #contact-us .custom-input {
     margin: 0 0 30px 0; }
   #contact-us .button {
@@ -372,12 +652,24 @@ h2 {
     margin: 0 0 30px 0;
     padding: 0; }
 
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak,
+.ng-hide:not(.ng-hide-animate) {
+  display: none !important; }
+
+ng\:form {
+  display: block; }
+
 .custom-input {
   font-size: 1.1em;
   font-weight: 100;
   border-radius: 3px;
   display: block;
-  padding: 20px 15px;
+  padding: 20px 15px 30px;
   border: 1px solid #c2c2c2;
   width: 100%;
   box-sizing: border-box; }
@@ -392,8 +684,21 @@ h2 {
   .custom-input:focus:-ms-input-placeholder {
     color: transparent; }
 
+.custom-input.ng-invalid {
+  border-color: #fff;
+  box-shadow: inset 0 0 0 2px #ff5656 !important; }
+
+.error {
+  color: #ff5656;
+  font-size: 0.9em;
+  margin-top: 3px;
+  text-align: right; }
+
 .info {
   margin: 30px 0 0 0; }
+  @media (max-width: 767px) {
+    .info {
+      text-align: center; } }
   .info .tel,
   .info .email {
     color: #018bd3;
@@ -401,10 +706,24 @@ h2 {
     display: block;
     margin-bottom: 15px; }
   .info .tel {
-    font-size: 1.3em;
-    position: relative;
-    padding: 100px 0 0 0;
-    background: url("../images/phone.png") no-repeat left top; }
+    font-size: 1.3em; }
+    @media (max-width: 767px) {
+      .info .tel {
+        background-position: center top; } }
+  .info .tel-icon {
+    padding: 20px;
+    background: url("../images/phone.png") no-repeat left top;
+    display: block;
+    width: 78px;
+    height: 78px; }
+    @media (max-width: 767px) {
+      .info .tel-icon {
+        margin: 0 auto 15px;
+        background-position: center center;
+        box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.1);
+        background-color: whitesmoke;
+        border-radius: 10px;
+        padding: 20px 60px; } }
   .info .email {
     font-size: 1.2em; }
 
