--- a/static/scss/_bootstrap_modal.scss
+++ b/static/scss/_bootstrap_modal.scss
@@ -4,8 +4,8 @@
     padding: 30px;
     box-sizing: border-box;
     @media(max-width: $mobile) {
-      height: 100%;
-      padding: 15px;
+      //height: 100%;
+      //padding: 15px;
     }
   }
 
@@ -49,13 +49,13 @@
     overflow-x: hidden;
     overflow-y: auto;
     box-shadow: 0 0 8px 2px rgba(0,0,0,0.2);
-    max-height: 100%;
+    //max-height: 100%;
 
     @media (max-width: $tablet) {
       width: 90%;
     }
     @media (max-width: $mobile) {
-      height: 96%;
+      //height: 96%;
     }
   }
 
@@ -94,7 +94,7 @@
     right: 0;
     top: 0;
 
-    padding: 5px 10px;
+    padding: 10px;
     cursor: pointer;
     color: rgba($color-default,0.5);
     font-size: 26px;
