Deploy with .mo translations
Compilemessages

Fix

Remove picture Beko and his wife from about us

About-us, desc

--- a/templates/index.html
+++ b/templates/index.html
@@ -380,12 +380,12 @@
                             </article>
                         </div>
                         <div class="col-m6 col-s12 col">
-                            <img
+                            <!-- <img
                                 class="picture"
                                 width="330"
                                 height="299"
                                 src="/static/images/family.png"
-                                alt="{{ _('Arifi family') }}">
+                                alt="{{ _('Arifi family') }}"> -->
                         </div>
                     </div>
                 </div>
