--- a/static/css/main.css
+++ b/static/css/main.css
@@ -529,7 +529,7 @@ h2 {
           left: 50%;
           transform: translateX(-50%) translateY(0); } }
     .main .item .description p {
-      line-height: 1.3;
+      line-height: 1.4;
       margin: 0 0 5px 0;
       padding: 0; }
       .main .item .description p:first-child {
@@ -649,8 +649,9 @@ h2 {
 
 .about-us .description {
   line-height: 1.3;
-  margin: 0 0 5px 0;
-  padding: 0; }
+  padding: 0 0 20px 0; }
+  .about-us .description p {
+    margin: 0 0 20px 0; }
 
 [ng\:cloak],
 [ng-cloak],
