--- a/static/scss/_articles.scss
+++ b/static/scss/_articles.scss
@@ -30,7 +30,7 @@
 
     .description {
       p {
-        line-height: 1.3;
+        line-height: 1.4;
         margin: 0 0 5px 0;
         padding: 0;
         &:first-child {
@@ -168,7 +168,9 @@
   }
   .description {
     line-height: 1.3;
-    margin: 0 0 5px 0;
-    padding: 0;
+    padding: 0 0 20px 0;
+    p {
+      margin: 0 0 20px 0;
+    }
   }
 }
